tdf#60683 tdf#55946 doc import: use style's anchor info

make CppunitTest_sw_ww8export CPPUNIT_TEST_NAME=testBnc787942

Change-Id: Ie1dc179fc3954b5eed73f3ee1f6dc95f4785f3e4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152331
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins